[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "MCP Server for weather telemetry - L'Hospitalet de Llobregat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.scripts]
weather-server = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
